# ClawFlowGen

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GITHUB_RELEASE_GUIDE.md  LICENSE  PAPER_MD_PUBLISH.md  PROJECT_REPORT.md  README.md  REPO_STRUCTURE.md  concept.html  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
blog/: technical-blog.md
blog-series/: README.md  blog-01.md  blog-02.md  blog-03.md  blog-04.md  blog-05.md  blog-06.md  blog-07.md  blog-08.md  blog-09.md  blog-10.md
docs/: DESIGN.md  index.md
examples/: generate_cpu.py  generate_npu.py
github/src/clawflowgen/: __init__.py  exporter.py  validator.py
news/: press-release.md
paper/: Makefile  SUBMISSION_README.md  main.md  main.tex  science_submission.html  science_submission.tex
paper/figures/: fig1_evolution.tex  fig1_evolution_model.tex  fig2_clawc_architecture.tex  fig2_parallelism.tex  fig3_architecture.tex  fig3_clawn_accelerator.tex  fig4_phase_transitions.tex  fig5_control_collapse.tex
paper/supplementary/: supplementary.tex
src/clawflowgen/: __init__.py  cli.py  config.py  core.py  interconnect.py  memory.py  operators.py
tests/: __init__.py  test_core.py
